fix alignment issue with borders

--- a/src/components/WeatherCard.scss
+++ b/src/components/WeatherCard.scss
@@ -17,7 +17,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    height: 40px;
+    height: 50px;
     border-bottom: solid black 2px;
     font-size: 20px;
   }
@@ -54,7 +54,7 @@
 .metar {
   border-right: solid black 2px;
   width: 50%;
-  height: 100%;
+  height: 96%;
 
   &__reportTime {
     display: flex;
@@ -204,7 +204,7 @@
     }
 
     &__bottom {
-      height: 99%;
+      height: 95%;
       font-size: 13px;
       display: flex;
       flex-direction: row;
